Fix home gradiant not aligning to top and bottom in .home home.scss

--- a/styles/pages/home/home.scss
+++ b/styles/pages/home/home.scss
@@ -4,6 +4,7 @@
 
   background: $color-contessa;
   color: $color-white;
+  overflow: hidden;
   text-align: center;
 
   &:before,
@@ -12,7 +13,6 @@
     height: 24rem;
     left: 0;
     position: absolute;
-    top: 0;
     width: 100%;
     z-index: 1;
   }
@@ -23,6 +23,7 @@
       $color-contessa 0%,
       rgba($color-contessa, 0) 100%
     );
+    left: 0;
     top: 0;
   }
 
@@ -33,12 +34,13 @@
       rgba($color-contessa, 0) 100%
     );
     bottom: 0;
+    left: 0;
   }
 }
 
 .home__wrapper {
-  width: 100%;
   height: 100%;
+  width: 100%;
 }
 
 .home__titles {
